clusters/home/apps/wg-easy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  labels:
    app: wg-easy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wg-easy
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      # topologySpreadConstraints:
      # - maxSkew: 1
      #   topologyKey: "kubernetes.io/hostname"
      #   whenUnsatisfiable: DoNotSchedule
      #   labelSelector:
      #     matchLabels:
      #       app: wg-easy
      restartPolicy: Always
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: wg
              containerPort: 51820
              protocol: UDP
            - name: wgdashboard
              containerPort: 51821
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "150m"
            limits:
              memory: "128Mi"
          volumeMounts:
            - name: wg-easy-data
              mountPath: /etc/wireguard
      volumes:
        - name: wg-easy-data
          persistentVolumeClaim:
            claimName: wg-easy
