clusters/home/apps/wg-easy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-easy
  labels:
    name: wg-easy
  annotations:
    kubernetes.io/ingress.class: nginx
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Wireguard VPN & Dashboard
    gethomepage.dev/group: Apps/Services
    gethomepage.dev/icon: wireguard
    gethomepage.dev/name: Wireguard
    gethomepage.dev/pod-selector: app=wg-easy
    gethomepage.dev/weight: "1"
spec:
  rules:
  - host: vpn.pacholoamit.com:51820
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wg-easy
            port: 
              number: 51820
  - host: vpn.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wg-easy
            port: 
              number: 51821
